# centaur-overlay

./: .gitignore  Dockerfile  README.md  pyproject.toml
.agents/skills/acme-support/: SKILL.md
.agents/skills/bd-meeting-intake/: SKILL.md
.agents/skills/bd-pipeline/: SKILL.md
.agents/skills/bd-pipeline-weekly/: SKILL.md
.agents/skills/bh-design/: SKILL.md
.agents/skills/bh-html-deck/: SKILL.md
.agents/skills/bh-html-deck/references/: architecture.md  brand-tokens.md  diagram-patterns.md  examples.md  section-patterns.md
.agents/skills/bh-html-deck/templates/: colors_and_type.css  controller-skeleton.js  deck-skeleton.html  diagram-skeleton.js  styles-skeleton.css
.agents/skills/birch-hill-pptx/: SKILL.md
.agents/skills/birch-hill-pptx/assets/: bh_logo_dark.emf  bh_logo_light.emf
.agents/skills/birch-hill-vault/: SKILL.md
.agents/skills/daily-note/: SKILL.md
.agents/skills/daily-note/assets/: daily-note-template.md
.agents/skills/research-data-pull/: SKILL.md
.agents/skills/research-to-deck/: SKILL.md
services/sandbox/: SYSTEM_PROMPT.md
tests/: test_acme_crm.py
tools/: __init__.py
tools/acme_crm/: cli.py  client.py  pyproject.toml
tools/bh_supabase/: client.py  pyproject.toml
tools/linear/: client.py  pyproject.toml
tools/obsidian_vault/: client.py  pyproject.toml
workflows/: daily_acme_brief.py
