[project]
name = "centaur-overlay"
version = "0.1.0"
description = "Birch Hill Centaur overlay — tools, skills, and prompts for Birch Hill Holdings"
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
