[project]
name = "bh-supabase"
version = "0.1.0"
description = "Query Birch Hill's research-service Supabase warehouse (Morpho historical markets, vault timeseries, curation snapshots) from a Centaur sandbox"
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"
dependencies = ["httpx>=0.28.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
description = "Query Birch Hill's research-service Supabase warehouse — Morpho historical markets, vault timeseries, curation snapshots. Use whenever the user asks about Morpho data Birch Hill has cached, Sentora vaults, or DeFi data not available in DefiLlama."
# Iron-proxy injects BH_SUPABASE_ANON_KEY in BOTH the Authorization (as
# `Bearer <key>`) and `apikey` headers on requests to the BH Supabase project.
# Supabase PostgREST requires both headers — `apikey` to authenticate the
# project and `Authorization: Bearer <key>` to scope the JWT role.
# The BH_SUPABASE_URL is a non-secret env var set on the api pod via
# centaur-infra api.extraEnv.
secrets = [
  {type = "http", name = "BH_SUPABASE_ANON_KEY", match_headers = ["Authorization", "apikey"], hosts = ["*.supabase.co"]},
]
